# citibike-checker

./: .gitignore  README.md  config.example.json  deploy.sh  pyproject.toml  template.yaml
.github/workflows/: deploy.yml
bootstrap/: github-oidc.yaml
data/: stations.json
docs/: index.html  stations.json
docs/superpowers/plans/: 2026-04-06-portable-setup.md  2026-04-07-waf-rate-limiting.md
docs/superpowers/specs/: 2026-04-06-portable-setup-design.md
scripts/: build_stations_web.py  find_nearby_stations.py  refresh_stations.sh  test_gbfs_vehicle_types.py  test_local.py  test_mock.py
src/citibike_parking/: __init__.py  cli.py  gbfs.py
src/lambda_app/: config.py  handler.py
tests/: test_handler.py
