[project]
name = "citibike-parking"
version = "0.1.0"
description = "Compute available Citi Bike dock spots for selected stations"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
citibike-parking = "citibike_parking.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citibike_parking"]

[dependency-groups]
dev = []
